// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openhandsEmitter > emits full-permission agent (snapshot) 1`] = `
"---
name: feature-builder
description: Implements features end-to-end across the codebase with full tooling.
---

## Role & Expertise
You are an expert code reviewer.

## When to Use
After code is written or modified.

## Workflow
1. Read the diff. 2. Flag issues. 3. Report.

## Checklist & Heuristics
- Correctness before style.

## Output Contract
A prioritized list of findings.

## Boundaries
Never modify code; review only.
"
`;

exports[`openhandsEmitter > emits read-only agent (snapshot) 1`] = `
"---
name: doc-reader
description: Reads and summarizes documentation without making changes.
---

## Role & Expertise
You are an expert code reviewer.

## When to Use
After code is written or modified.

## Workflow
1. Read the diff. 2. Flag issues. 3. Report.

## Checklist & Heuristics
- Correctness before style.

## Output Contract
A prioritized list of findings.

## Boundaries
Never modify code; review only.
"
`;
